--- a/apps/http-backened/package.json
+++ b/apps/http-backened/package.json
@@ -4,20 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
-    "start": "NODE_ENV=production node dist/index.js",
-    "dev": "npm run build && NODE_ENV=dev node dist/index.js"
+    "build": "tsc -b",
+    "start": "node ./dist/index.js",
+    "dev": "npm run build && npm run start"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace: *",
-    "cross-env": "^7.0.3",
-    "esbuild": "^0.25.4"
+    "@repo/typescript-config": "workspace: *"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/express": "^5.0.2",
-    "express": "^5.1.0"
-  }
+  "license": "ISC"
 }
