--- a/apps/http-backened/package.json
+++ b/apps/http-backened/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "authenticator": "^1.1.5",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "twilio": "^5.6.1"
   }
 }
