--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "db",
+  "name": "@repo/db",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "exports": {
+    "./client": "./src/index.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace: *"
+    "@repo/typescript-config": "workspace:*",
+    "prisma": "^6.8.2"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "prisma": "^6.8.2"
+    "@prisma/client": "6.8.2",
+    "dotenv": "^16.4.7"
   }
 }
